--- a/src/styles/home/_terminal.scss
+++ b/src/styles/home/_terminal.scss
@@ -48,6 +48,7 @@
 #terminal .terminal__content .content__wrapper {
 	min-height: 562px;
 	height: 90%;
+	max-height: 920px;
 	position: relative;
 	overflow: visible;
 
